// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render default 1`] = `<div class="SidebarBoards"><span tag="ul" name="boardReveal" class="board-list"></span></div>`;

exports[`render in edit mode 1`] = `
<div class="SidebarBoards"><span tag="ul" name="boardReveal" class="board-list"><li title="Board #1 (read-only)" class="list-item _read-only"><!----> <button class="board-button"><board-stub id="1" isthumb="true" title="" cells="[object Object],[object Object]" class="board"></board-stub></button> <div class="board-title">
        Board #1
      </div></li><li title="Board #2" class="list-item"><div class="board-actions" name="actionsReveal"><button type="button" class="remove-button"><v-icon-stub name="minus-circle"></v-icon-stub></button></div> <button class="board-button"><board-stub id="2" isthumb="true" title="" cells="[object Object],[object Object]" class="board"></board-stub></button> <div class="board-title">
        Board #2
      </div></li></span></div>
`;

exports[`render with active board 1`] = `
<div class="SidebarBoards"><span tag="ul" name="boardReveal" class="board-list"><li title="Board #1 (read-only)" class="list-item _active _read-only"><!----> <button class="board-button"><board-stub id="1" isthumb="true" title="" cells="[object Object],[object Object]" class="board"></board-stub></button> <div class="board-title">
        Board #1
      </div></li><li title="Board #2" class="list-item"><!----> <button class="board-button"><board-stub id="2" isthumb="true" title="" cells="[object Object],[object Object]" class="board"></board-stub></button> <div class="board-title">
        Board #2
      </div></li></span></div>
`;

exports[`render with boards 1`] = `
<div class="SidebarBoards"><span tag="ul" name="boardReveal" class="board-list"><li title="Board #1 (read-only)" class="list-item _read-only"><!----> <button class="board-button"><board-stub id="1" isthumb="true" title="" cells="[object Object],[object Object]" class="board"></board-stub></button> <div class="board-title">
        Board #1
      </div></li><li title="Board #2" class="list-item"><!----> <button class="board-button"><board-stub id="2" isthumb="true" title="" cells="[object Object],[object Object]" class="board"></board-stub></button> <div class="board-title">
        Board #2
      </div></li></span></div>
`;
